Add storage unit test and fix bugs that it revealed

--- a/tests/runner.html
+++ b/tests/runner.html
@@ -19,7 +19,8 @@
                  * Add individual unit tests.
                  * This should probably be automated.
                  */
-                'auth-delegates-tests/spec/user'
+                'auth-delegates-tests/spec/user',
+                'auth-delegates-tests/spec/util/storage'
             ], function() {
                 if (window.mochaPhantomJS) {
                     mochaPhantomJS.run();
