Add unit tests for jsonp and fix up module

--- a/tests/runner.html
+++ b/tests/runner.html
@@ -20,6 +20,7 @@
                  * This should probably be automated.
                  */
                 'auth-delegates-tests/spec/user',
+                'auth-delegates-tests/spec/util/jsonp',
                 'auth-delegates-tests/spec/util/storage'
             ], function() {
                 if (window.mochaPhantomJS) {
