--- a/sample/lfsp.html
+++ b/sample/lfsp.html
@@ -29,7 +29,7 @@
                 });
 
                 // Lfsp delegate
-                var d = new Delegate({
+                var d = new Delegate('NjkzOTg4LjQzNzUzMTUxNg==', '286470', {
                 	engageOpts: {
                 		app: 'livefyre-dev'
                 	},
@@ -46,6 +46,7 @@
                 };
 			});
         </script>
+    </head>
     <body>
         <h1>LFSP Auth Sample</h1>
         <a href="#" id="login">Login</a>
