Add code for backplane and remote auth delegates

--- a/tests/runner.html
+++ b/tests/runner.html
@@ -22,8 +22,10 @@
                  * This should probably be automated.
                  */
                 'auth-delegates-tests/spec/user',
+                'auth-delegates-tests/spec/delegates/backplane',
                 'auth-delegates-tests/spec/delegates/livefyre',
                 'auth-delegates-tests/spec/delegates/lfsp',
+                'auth-delegates-tests/spec/delegates/remote',
                 'auth-delegates-tests/spec/util/jsonp',
                 'auth-delegates-tests/spec/util/storage'
             ], function() {
