Migrate loadSession on the auth delegates to restoreSession on the Livefyre.user global.

--- a/sample/livefyrecom.html
+++ b/sample/livefyrecom.html
@@ -36,7 +36,8 @@
                 logoutEl.onclick = function() {
                     d.logout();
                 };
-                d.loadSession();
+
+                Livefyre.user.restoreSession();
             });
         </script>
     </head>
