Move restoreSession back to auth delegates.
Depending on the delegate (such as remote) restoreSession should
not by default simply log the user in without a token. As such,
each delegate handles the restore session functionality differently.

--- a/sample/livefyrecom.html
+++ b/sample/livefyrecom.html
@@ -29,7 +29,7 @@
                 });
 
                 // Livefyre.com delegate
-                var d = new Delegate('NjkzOTg4LjQzNzUzMTUxNg==', '286470', 'http://www.fyre');
+                var d = new Delegate('693988.437531517', '286470', 'http://www.fyre');
                 loginEl.onclick = function() {
                     d.login();
                 };
@@ -37,7 +37,7 @@
                     d.logout();
                 };
 
-                Livefyre.user.restoreSession();
+                d.restoreSession();
             });
         </script>
     </head>
