LF-10239: Support https in auth delegates
https://livefyre.atlassian.net/browse/LF-10239

--- a/test/runner.html
+++ b/test/runner.html
@@ -27,7 +27,8 @@
                 'auth-delegates-tests/spec/delegates/lfsp',
                 'auth-delegates-tests/spec/delegates/remote',
                 'auth-delegates-tests/spec/util/jsonp',
-                'auth-delegates-tests/spec/util/storage'
+                'auth-delegates-tests/spec/util/storage',
+                'auth-delegates-tests/spec/util/url'
             ], function() {
                 if (window.mochaPhantomJS) {
                     mochaPhantomJS.run();
